<resources>
    <string name="app_name">Transporte Zaragoza</string>
    <string name="favorites_destination_title" translatable="true">Favorites</string>
    <string name="map_destination_title" translatable="true">Map</string>
    <string name="search_destination_title" translatable="true">Search</string>
    <string name="reminders_destination_title" translatable="true">Reminders</string>
    <string name="more_destination_title" translatable="true">More</string>
    <string name="theme_picker_title" translatable="true">Themes</string>
    <string name="slide_welcome_title" translatable="true">Welcome!</string>
    <string name="slide_welcome_description" translatable="true">Thanks for trying out Zaragoza Transport. Don\'t worry, this won\'t take long!</string>
    <string name="slide_find_title" translatable="true">Find your stop!</string>
    <string name="slide_find_description" translatable="true">Use the MAP or SEARCH to quickly find any stop. Location information is used to display nearby stops and show your position on the map.</string>
    <string name="slide_favorites_title" translatable="true">Add favorites!</string>
    <string name="slide_favorites_description" translatable="true">Add stops to your favorites for easier access. Rename, color code and reorder your favorites to keep them organized.</string>
    <string name="slide_reminder_title" translatable="true">Create a reminder!</string>
    <string name="slide_reminder_description" translatable="true">Do you check the same bus stop when you leave home for work every morning? Setup a reminder to receive a notification at a chosen time with the arrival times.</string>
    <string name="slide_more_title" translatable="true">Make it yours!</string>
    <string name="slide_more_description" translatable="true">Personalize the app with different color themes and other settings on MORE. Dark themes for AMOLED screens available!</string>
    <string name="no_favorites" translatable="true">No favorite stops yet!</string>
    <string name="edit_favorite_dialog_title" translatable="true">Edit favorite</string>
    <string name="edit" translatable="true">Edit</string>
    <string name="rearrange" translatable="true">Rearrange</string>
    <string name="stop_type" translatable="true">Stop type</string>
    <string name="stop_type_bus" translatable="true">Stop type bus</string>
    <string name="stop_type_tram" translatable="true">Stop type tram</string>
    <string name="stop_type_rural" translatable="true">Stop type rural</string>
    <string name="alias" translatable="true">Alias</string>
    <string name="color" translatable="true">Color</string>
    <string name="restore" translatable="true">Restore</string>
    <string name="restore_favorite_title" translatable="true">Restore favorite stop</string>
    <string name="restore_favorite_message" translatable="true">Do you want to restore the original alias and color of this favorite?</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="delete_favorite_title" translatable="true">Delete favorite</string>
    <string name="delete_favorite_message" translatable="true">Are you sure you want to delete this favorite? This cannot be undone.</string>
    <string name="added_favorite_snackbar" translatable="true">Favorite added!</string>
    <string name="removed_favorite_snackbar" translatable="true">Favorite removed.</string>
    <string name="no_data_available" translatable="true">No data available</string>
    <string name="no_data_available_suggestions" translatable="true">Please check your internet connection and try again.\n\nArrival times are obtained from every available source: the city council public API, the Avanza tram and bus websites and the CTAZ service. If the problem persists the entire system is probably undergoing maintenance and the information is impossible to obtain.\n\nSome stops don\'t receive time updates, specially outside of their schedule.</string>
    <string name="time_not_tracked_explanation" translatable="true">Careful! This time can be highly inaccurate.\n\nCTAZ provides this arrival time based on scheduling tables and not on real time vehicle tracking.\n\nTry locating your next bus with the tracking feature on the line view to confirm the estimate.</string>
    <string name="no_estimate" translatable="true">No estimate</string>
    <string name="minutes" translatable="true">minutes</string>
    <string name="minute" translatable="true">minute</string>
    <string name="at_the_stop" translatable="true">At the stop</string>
    <string name="fab_add_favorite" translatable="true">Add to favorites</string>
    <string name="fab_remove_favorite" translatable="true">Remove favorite</string>
    <string name="fab_reminder" translatable="true">Create reminder</string>
    <string name="fab_shortcut" translatable="true">Create shortcut</string>
    <string name="create_shortcut" translatable="true">Create shortcut</string>
    <string name="create_reminder" translatable="true">Create reminder</string>
    <string name="create_button" translatable="true">Create</string>
    <string name="shortcut_pinning_not_supported" translatable="true">Shortcuts not support in your device</string>
    <string name="directions_menu_item" translatable="true">Directions</string>
    <string name="refresh_menu_item" translatable="true">Refresh</string>
    <string name="pinned_shortcut_snackbar" translatable="true">Created shortcut!</string>
    <string name="stop" translatable="true">Stop %1$s</string>
    <string name="number_template" translatable="true">Number %1$s</string>
    <string name="estimated_time_warning" translatable="true">Estimated time warning</string>
    <string name="line_title_placeholder" translatable="true">Line unknown</string>
    <string name="line_template" translatable="true">Line %1$s</string>
    <string name="lines" translatable="true">Lines</string>
    <string name="schedule_menu_item" translatable="true">Schedule</string>
    <string name="tram_line_schedule_url" translatable="false">https://www.tranviasdezaragoza.es/es/informacion/horaires</string>
    <string name="bus_line_schedule_url" translatable="false">http://zaragoza.avanzagrupo.com/frm_esquemaparadas.php?tipoPag=Linea&amp;LINEASEL=%1$s</string>
    <string name="tram_line_schedule_title" translatable="true">Tram line schedule</string>
    <string name="bus_line_schedule_title" translatable="true">Bus line %1$s schedule</string>
    <string name="rural_line_schedule_title" translatable="true">Rural line %1$s schedule</string>
    <string name="line_not_found" translatable="true">Unrecognized line, I\'m working on it!</string>
    <string name="tram_line_schedule_javascript" translatable="false">javascript:(function(){$(\'#menu_responsive\').hide();$(\'#wrraperContainerMenu\').hide();$(\'.entry-content.clearfix\').appendTo(\'body\');})()</string>
    <string name="bus_line_schedule_javascript" translatable="false">javascript:(function(){document.querySelector(\'#cabecera\').style.display = \'none\';document.querySelector(\'#pie\').style.display = \'none\';document.querySelector(\'#contenido > div.hgroup\').style.display = \'none\';document.querySelector(\'#paradas > div.select\').style.display = \'none\';document.querySelector(\'#linea\').style.display = \'none\';})()</string>
    <string name="reminder" translatable="true">Reminder</string>
    <string name="no_reminders" translatable="true">No reminders yet!</string>
    <string name="edit_reminder_dialog_title" translatable="true">Edit reminder</string>
    <string name="restore_reminder_title" translatable="true">Restore reminder</string>
    <string name="restore_reminder_message" translatable="true">Do you want to restore the original alias and color of this reminder?</string>
    <string name="delete_reminder_title" translatable="true">Delete reminder</string>
    <string name="delete_reminder_message" translatable="true">Are you sure you want to delete this reminder? This cannot be undone.</string>
    <string name="delete" translatable="true">Delete</string>
    <string name="added_reminder_snackbar" translatable="true">Reminder added!</string>
    <string name="removed_reminder_snackbar" translatable="true">Reminder removed.</string>
    <string name="time_template" translatable="true">time %1$s</string>
    <string name="bus_chip" translatable="true">BUS</string>
    <string name="bus_chip_description" translatable="true">bus stops filter</string>
    <string name="tram_chip" translatable="true">TRAM</string>
    <string name="tram_chip_description" translatable="true">tram stops filter</string>
    <string name="rural_chip" translatable="true">RURAL</string>
    <string name="rural_chip_description" translatable="true">rural stops filter</string>
    <string name="rural_tracking" translatable="true">Rural bus tracking</string>
    <string name="location_outside_zaragoza_bounds" translatable="true">Function not available outside of Zaragoza.</string>
    <string name="traffic_layer_description" translatable="true">traffic information</string>
    <string name="traffic_layer_disabled_description" translatable="true">disable traffic information</string>
    <string name="traffic_layer_enabled_description" translatable="true">enable traffic information</string>
    <string name="map_type_description" translatable="true">map view type</string>
    <string name="map_type_satellite_description" translatable="true">enable satellite view</string>
    <string name="map_type_normal_description" translatable="true">enable map view</string>
    <string name="vehicle_template" translatable="true">Vehicle %1$s</string>
    <string name="no_trackings_available" translatable="true">Couldn\'t find any rural trackings, try again later!</string>
    <string name="rural_trackings_template" translatable="true">Rural bus trackings (%1$s)</string>
    <string name="rural_trackings" translatable="true">Rural bus trackings</string>
    <string name="search_view_hint" translatable="true">Name, destination or number…</string>
    <string name="search_nearby_stops" translatable="true">NEARBY</string>
    <string name="search_all_stops" translatable="true">EVERY STOP</string>
    <string name="search_lines" translatable="true">LINES</string>
    <string name="qr_scan_menu_item" translatable="true">Scan QR code</string>
    <string name="qr_scan_prompt" translatable="true">Place the stop QR code on the center of the screen</string>
    <string name="qr_not_recognized" translatable="true">QR code not recognized.</string>
    <string name="search_nearby_stops_empty" translatable="true">No stops nearby!</string>
    <string name="favorite_status" translatable="true">Favorite status</string>
    <string name="stop_favorited" translatable="true">Favorited stop</string>
    <string name="stop_not_favorited" translatable="true">Not favorited stop</string>
    <string name="search" translatable="true">Search</string>
    <string name="location_rationale" translatable="true">This permission is used to display your location on the map and to find nearby stops. Location information will never be used for any other purpose.</string>
    <string name="saved_bus_stops_version_number_key" translatable="false">SAVED_BUS_STOPS_VERSION_NUMBER_KEY</string>
    <string name="saved_tram_stops_version_number_key" translatable="false">SAVED_TRAM_STOPS_VERSION_NUMBER_KEY</string>
    <string name="saved_rural_stops_version_number_key" translatable="false">SAVED_RURAL_STOPS_VERSION_NUMBER_KEY</string>
    <string name="saved_bus_lines_version_number_key" translatable="false">SAVED_BUS_LINES_VERSION_NUMBER_KEY</string>
    <string name="saved_tram_lines_version_number_key" translatable="false">SAVED_TRAM_LINES_VERSION_NUMBER_KEY</string>
    <string name="saved_rural_lines_version_number_key" translatable="false">SAVED_RURAL_LINES_VERSION_NUMBER_KEY</string>
</resources>