<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardElevation="4dp"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

        <View
                android:id="@+id/favorite_color"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/type_image_favorite"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/stop_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/favorite_color"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/title_text_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="?colorOnSurface"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
                app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_view_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit"
                android:drawableBottom="@drawable/ic_edit_black_24dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@id/reorder_view_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reorder_view_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rearrange"
                android:drawableBottom="@drawable/ic_reorder_black_24dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_view_favorite" />

        <GridLayout
                android:id="@+id/lines_layout_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:columnCount="7"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/number_text_favorite"
                app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
                app:layout_constraintTop_toBottomOf="@+id/title_text_favorite" />

        <TextView
                android:id="@+id/number_text_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="?colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
                app:layout_constraintStart_toEndOf="@+id/lines_layout_favorite"
                app:layout_constraintTop_toBottomOf="@+id/title_text_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>